--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,9 +1,9 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
+name: John Simmons
+avatar: /static/images/johnandsammy.jpg
 occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
+company: perpetua.digital
+email: john@perpetua.digital
 twitter: https://twitter.com/Twitter
 linkedin: https://www.linkedin.com
 github: https://github.com
