--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,10 +1,9 @@
 ---
 name: John Simmons
 avatar: /static/images/johnandsammy.jpg
-occupation: Professor of Atmospheric Science
+occupation: Analytics Engineer
 company: perpetua.digital
 email: john@perpetua.digital
-twitter: https://twitter.com/Twitter
 linkedin: https://www.linkedin.com
 github: https://github.com
 ---
