--- a/data/blog/adobe-analytics-alerts-in-microsoft-teams.mdx
+++ b/data/blog/adobe-analytics-alerts-in-microsoft-teams.mdx
@@ -1,11 +1,10 @@
 ---
 title: 'Adobe Analytics alerts and Microsoft Teams'
-date: '2023-02-02'
-tags: ['adobe analytics', 'microsoft teams', 'alert']
+date: '2023-02-03'
+tags: ['adobe analytics', 'microsoft teams', 'alerts']
 draft: false
 summary: 'A quick way to send Adobe Analytics Alerts to Microsft Teams Rooms'
 ---
-
 
 ## Corporate Chat apps and you
 
@@ -13,7 +12,6 @@ Here is a quick one for you all. I, like many IT professionals, am forced to use
 Occasionally, I get a survey from Microsoft asking me how much I like Teams. To which I think to myself, 
 “I have no choice in the matter”. That’s life though. We must make the best of the hand we are dealt, even 
 if that hand includes sometimes letting a corporate chat app stress you out. Anyway, here’s how I use Teams rooms to save my inbox from Adobe Analytics alerts.
-
 
 
 ## Sending Adobe Analytics Alerts as to Teams rooms
@@ -24,3 +22,24 @@ Did you know you can turn anything in workspace into an email alert? Did you als
 To get the email address of any Teams channel (are they channels or rooms? eh who cares?) hover over it 
 and click on the 3 dots that come up to the right of the name. You will see an option that says Get Email Address. 
 This will give you an email address for the channel. Emails you send here will show up as teams messages.
+
+![get email address](https://images.ctfassets.net/on47yk52ubpi/7ydcij9Xs1DdOEynblXfzn/e8e80e75ffbb0a3351129e7523f6afb1/Screen_Shot_2023-01-25_at_4.40.31_PM.png)
+
+Copy the email address. You’ll need it in a second.
+
+Over in Adobe Analytics, create an [Alert](https://experienceleague.adobe.com/docs/analytics/analyze/reports-analytics/alerts.html?lang=en). Ideas for alerts usually come to me during the trance like flow-state I 
+enter whilst weaving a narrative of numbers with the loom of Workspace. When this inspiration strikes, I like to right 
+click on row in workspace and click *Create alert from selection* to bring up the alert builder with some stuff prefilled.
+
+![create alert from selection](https://images.ctfassets.net/on47yk52ubpi/7tJ8ZOEJW6LRnZjlXUJyeC/1b3209f7702d452ecf6c6406b8be161b/Screen_Shot_2023-01-25_at_4.47.00_PM.png)
+
+In the alert builder, put the email address from Teams as a recipient. To do some quick testing, you can build 
+something that is guaranteed to trigger immediately.
+
+![team address goes here](https://images.ctfassets.net/on47yk52ubpi/1yrTt5jJxQ2yTEhIoS2s4X/31860fd64ae6de290bdb15aef0259f07/Screen_Shot_2023-01-25_at_4.53.43_PM.png)
+
+![alert email in teams room](https://images.ctfassets.net/on47yk52ubpi/3Ku7sbHmpWWhZkraQdtkYQ/f6b514ad3c1facfea4412f6d4fc4a31b/Screen_Shot_2023-01-25_at_5.00.10_PM.png)
+
+Now when this alert occurs, I get this Teams message and 1 less email. This has the added 
+benefit of being able to notify large groups of people at once without having to add individual recipients! 
+Less email for everyone!
