--- a/data/blog/adobe-analytics-alerts-in-microsoft-teams.mdx
+++ b/data/blog/adobe-analytics-alerts-in-microsoft-teams.mdx
@@ -3,7 +3,7 @@ title: 'Adobe Analytics alerts and Microsoft Teams'
 date: '2023-02-03'
 tags: ['adobe analytics', 'microsoft teams', 'alerts']
 draft: false
-summary: 'A quick way to send Adobe Analytics Alerts to Microsft Teams Rooms'
+summary: 'A quick way to send Adobe Analytics Alerts to Microsoft Teams Rooms'
 ---
 
 ## Corporate Chat apps and you
