--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -4,12 +4,22 @@ avatar: /static/images/johnandsammy.jpg
 occupation: Analytics Engineer
 company: perpetua.digital
 email: john@perpetua.digital
-linkedin: https://www.linkedin.com
-github: https://github.com
+linkedin: https://www.linkedin.com/in/johndavidsimmons/
+twitter: https://www.instagram.com/johndavidsimmons/
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+My name is John Simmons and I am a web analytics engineer from Michigan, USA.
+Although I dabble in other tools once in a while, my primary focus and experience is in the
+Adobe Experience Platform. I'm an Adobe Certified Developer in both Adobe Analytics and Target also.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+I started out putting click tags on buttons and accidentally became a _real_ engineer along the way.
+My goal with this blog is to prove to myself \(_or at least try to_\) that I know what I am talking about. If it helps someone
+out along the way, even better!
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+Please reach out to me on social media if you wish to discuss any of the following topics:
+
+- The esoteric nuances of Adobe Launch, Adobe Analytics, Adobe Target, or the Adobe Experience Platform Web SDK
+- The adoption of [Esperanto](https://en.wikipedia.org/wiki/Esperanto) as the world's universal language
+- The raising of dachshunds
+- The superiority of fly fishing to all other types of fishing
+- Brazilian Jiu-Jitsu being the ultimate form of unarmed combat
