--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -10,9 +10,9 @@ twitter: https://www.instagram.com/johndavidsimmons/
 
 My name is John Simmons and I am a web analytics engineer from Michigan, USA.
 Although I dabble in other tools once in a while, my primary focus and experience is in the
-Adobe Experience Platform. I'm an Adobe Certified Developer in both Adobe Analytics and Target also.
+Adobe Experience Platform. I'm an Adobe Certified Developer in both Adobe Analytics and Adobe Target.
 
-I started out putting click tags on buttons and accidentally became a _real_ engineer along the way.
+I started out putting click tags on buttons and accidentally became a "real" engineer along the way.
 My goal with this blog is to prove to myself \(_or at least try to_\) that I know what I am talking about. If it helps someone
 out along the way, even better!
 
