--- a/data/blog/adding-click-tracking-to-shadow-dom-elements.mdx
+++ b/data/blog/adding-click-tracking-to-shadow-dom-elements.mdx
@@ -128,7 +128,7 @@ So there isn't really an out of the box solution for this in Launch. Maybe someo
 Anyway, I really only see 2 options:
 
 - Build a direct call event or datalayer push into the code that builds the web component
-- Write custom code in Launh that reaches into the shadow root and adds direct call/datalayer push on the click event
+- Write custom code in Launch that reaches into the shadow root and adds direct call/datalayer push on the click event
 
 ## Integrating into the web component
 
@@ -144,7 +144,7 @@ button.addEventListener('click', () =>
 shadow.appendChild(button)
 ```
 
-![irect call rule](https://images.ctfassets.net/on47yk52ubpi/3kolQkxUBmc40YnjYkeSdf/da855cad428f61d079de34e518e27183/bluebuttondirectcall.gif)
+![direct call rule](https://images.ctfassets.net/on47yk52ubpi/3kolQkxUBmc40YnjYkeSdf/da855cad428f61d079de34e518e27183/bluebuttondirectcall.gif)
 
 <figure>
   <figcaption>I didn't set up a direct call rule, but you get the point, it works</figcaption>
