--- a/data/blog/launch-github-sync-part-1.mdx
+++ b/data/blog/launch-github-sync-part-1.mdx
@@ -3,7 +3,7 @@ title: 'Syncing Adobe Launch/Tags with Github - Part 1: Setup'
 date: '2023-04-18'
 tags: ['adobe launch', 'adobe tags', 'javascript', 'github', 'automation']
 draft: false
-summary: 'How to use Github to build, sync, & deploy custom code directly to Adobe Launch/Tags'
+summary: 'How to use Github to build, sync, & deploy custom code directly to Adobe Launch/Tags - Part 1'
 ---
 
 ## Down the rabbit hole
