--- a/data/blog/launch-github-sync-part-2.mdx
+++ b/data/blog/launch-github-sync-part-2.mdx
@@ -6,39 +6,57 @@ draft: false
 summary: 'How to use Github to build, sync, & deploy custom code directly to Adobe Launch/Tags - Part 2'
 ---
 
-## The Github push webhook...
+## The Github push webhook
 
-After the setup that I mentioned in the previous post is completed, I can tap into the Github push webhook to kickoff the syncing between
-Github and Launch.
-This webhook will notify my API that some file changes have occurred in Github and that those changes that _may_ need to be updated in Launch.
-I say _may_ here because the Github push webhook will notify me of all repository changes and it will be up to me to
-determine what, if anything, needs to be synced with Launch.
+After the setup that I mentioned in the [first post](https://www.perpetua.digital/blog/launch-github-sync-part-1) is completed,
+I can tap into the Github push webhook to kickoff the syncing between
+Github and Launch. This webhook will notify my API that some file modifications have
+occurred in Github and that those changes that _may_ require updates to Launch data elements.
+I say _may_ here because the Github push webhook will notify me of all file modifications in my
+repository and it will be up to me to determine what, if anything, needs to be synced with Launch.
 
-The github webhook also introduces the first layer of security in the form of a [Github personal access token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token). This ensures
-lets me verify that any data sent to it actually came from me.
+The Github push webhook also introduces the first layer of security in the form of a
+[Webhook secret](https://docs.github.com/en/webhooks-and-events/webhooks/securing-your-webhooks#setting-your-secret-token).
+This allows me to verify calls made to the API. More on that later.
 
-So what exactly is webhook? Off the top of my head, and by that, I mean ChatGPT, a webhook is:
+So what exactly is webhook? Off the top of my head, and by that, I according to ChatGPT, a webhook is:
 
-> a way for two applications to communicate with each other in real-time. \
-> It is a type of API (Application Programming Interface) that allows one application to send data to\
->  another application automatically whenever a certain event occurs.
+> a way for two applications to communicate with each other in real-time. It is a type of API (Application Programming Interface) that allows one application to send data to \ another application automatically whenever a certain event occurs.
 >
-> Webhooks work by sending a notification to a URL endpoint that is specified by the receiving application.\
-> This notification typically contains a payload of data that describes the event that triggered the webhook.
+> Webhooks work by sending a notification to a URL endpoint that is specified by the receiving application. This notification typically contains a payload of data that describes the event that triggered the webhook.
 
-In order to start receiving notifications from Github via the push webhook and handling that data, I need to do 2 things:
+In order to start receiving notifications from Github about file updates via the push webhook, I need to do 2 things:
 
-- Build and API endpoint for the webhook to send data to
-- Configure that endpoint I built in Github
+- Build and API endpoint for the webhook to send its POST requests to
+- Configure that endpoint as a webhook in my Github repo
 
 I'll start with building an endpoint...
 
-## My API for receiving Github data
+## My API for receiving Github push webhooks
 
-Fortunately for me, going super in depth about building and hosting endpoints is beyond the scope of this little blog thing I got going, but I
-_highly_ suggest reading about building APIs in [Flask](https://pythonbasics.org/flask-rest-api/) for Python (like mine is) or [Express](https://medium.com/makers-byte/building-a-restful-api-with-express-js-a-beginners-guide-dcb1a1e3520d) for Node.
-Once built, you then need to host your endpoint server publicly so Github can access it. Lots of options here, the most obvious (and the one I went with) AWS
+Fortunately for me, going super in depth about building and hosting API endpoints is
+beyond the scope of this little blog thing I got going. If you are new to such things, I
+_highly_ suggest reading about building APIs in [Flask](https://pythonbasics.org/flask-rest-api/)
+for Python (like mine is) or [Express](https://medium.com/makers-byte/building-a-restful-api-with-express-js-a-beginners-guide-dcb1a1e3520d) for Node.
+Once built, you then need to host your endpoint server somwhere public so Github can access it.
+Lots of options here, the most obvious (and the one I went with) AWS
 [web hook gateways](https://medium.com/mindorks/building-webhook-is-easy-using-aws-lambda-and-api-gateway-56f5e5c3a596).
+
+Below is the [Flask route](https://exploreflask.com/en/latest/views.html) for my endpoint that will
+receive and handle pushes from Github. If you've never worked in Flask or made an API before, it might look a
+little complicated, but it really only does a couple things. Here's the highlights
+
+- `@verify_github_webhook_secret` is a Python decorator that makes sure any POST requests
+  to this route not only come from Github, but come from me specifically.
+- `modified_data_element_files` is a `list` of all the data element files that have been updated
+  in this push. If there are _zero_ changed data element files, like if I updated a `README.md` file,
+  the entire flow stops here. No need to sync with Launch.
+- The `dict` called `data` contains all the information I will need about this push to look up the
+  _actual content_ of the files. The push webhook only says that contents was modified, but not
+  specifically what those modifications were.
+- Finally, if everything checks out, I invoke the next Lambda in the flow which will call the github
+  API to extract the specific file contents which will prepare them for the Launch API. _In my actual code
+  `FunctionName` is the name of the next lambda I call._
 
 ```python
 @app.route("/github-webhook-handler", methods=['POST'])
@@ -89,3 +107,40 @@ def github_webhook():
     except Exception as e:
         return make_response(jsonify(error=f'Error {e}'), 500)
 ```
+
+By far, the easiest way to create and deploy AWS Lambdas and API Gateways is through the
+[Serverless](https://www.serverless.com/) framework. It takes care of the drudgery of uploading
+packages to AWS and has a nicer UI. Highly recommended.
+
+Once I get this API deployed, I'm going to have a publicly reachable route to POST to. First task complete. It is this
+URL that I then configure inside of Github.
+
+My deployed API will have a route that will look _something_ like the URL below. Notice how the path `github-webhook-handler`
+is the path I defined in `@app.route` above.
+
+`https://fakedatahere.execute-api.aws-region-name-here.amazonaws.com/github-webhook-handler`
+
+## Setting up a Push webhook on a Github repo
+
+Now that I have my endpoint URL all set up and running in "the cloud",
+I need to tell my Github repo to post to it on Push events. To do that,
+I go into my Repo and got to `Settings > Webhooks > Add Webhook`.
+
+![IMAGE OF ADD WEBHOOK SCREEN](https://images.ctfassets.net/on47yk52ubpi/3OVr7rQodGU65n9i6iZMiG/7f86e59fe320e74d868b34602e5ad2e9/Screenshot_2023-04-20_at_11.49.56_PM.png)
+
+<figure>
+  <figcaption>
+    The endpoint URL I made goes in `payload url` and I need to [generate a random
+    string](https://www.random.org/strings/) for a secret. SAVE IT SOMEWHERE SAFE!
+  </figcaption>
+</figure>
+
+Once the webhook is setup, I can QA that it's working by doing some push events and
+checking the **Recent Deliveries** section. If something is broken, like I pasted the wrong URL
+or I don't have my secret keys setup, errors will show here.
+
+![IMAGE OF RECENT DELIVERIES](https://images.ctfassets.net/on47yk52ubpi/4x3o3ACbRyF7o2eq7xUFwp/8653cb21c4fe50e96a98b4be1bb4e14e/Screenshot_2023-04-20_at_11.51.55_PM.png)
+
+## In action
+
+So all this happens in an instant, but here is what happens step by step (with pictures!!!!!)
