--- a/data/blog/syncing-cms-content-and-adobe-target-offers.mdx
+++ b/data/blog/syncing-cms-content-and-adobe-target-offers.mdx
@@ -3,7 +3,7 @@ title: 'Syncing CMS images with Adobe Target Offers'
 date: '2023-05-23'
 tags: ['adobe target', 'contentful', 'webhooks', 'cms']
 draft: false
-summary: 'Using Webhooks to automatically create an Adobe Target offer out of CMS content'
+summary: 'Using Webhooks to automatically create Adobe Target offers out of CMS content'
 ---
 
 ## Contentful
