--- a/data/blog/launch-github-sync-part-3.mdx
+++ b/data/blog/launch-github-sync-part-3.mdx
@@ -105,7 +105,7 @@ data = [
     fileContents: '// DE54ba274f10aa44cc962a89c355261771\nreturn "hello world github 3"\n',
     dataElementIds: ['DE54ba274f10aa44cc962a89c355261771'],
     sha: 'ABC1234....',
-    author_name: 'John Simmons',
+    author_name: 'Perpetua Digital',
   },
 ]
 ```
