--- a/data/blog/self-hosting-adobe-launch-with-aws.mdx
+++ b/data/blog/self-hosting-adobe-launch-with-aws.mdx
@@ -91,7 +91,7 @@ Watch on 1.5x speed because I think a lot between sentences :)
   height="315"
   src="https://www.youtube.com/embed/Shs7lRFkIQ4?si=6beSzuM30akwXGtX"
   title="YouTube video player"
-  frameborder="0"
+  frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerpolicy="strict-origin-when-cross-origin"
   allowfullscreen
@@ -107,7 +107,7 @@ There are some ins and outs of managing SSL certificates in AWS, using custom do
   height="315"
   src="https://www.youtube.com/embed/NRbgpV4tBTI?si=3ZgvaNdiUELy4G-p"
   title="YouTube video player"
-  frameborder="0"
+  frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerpolicy="strict-origin-when-cross-origin"
   allowfullscreen
