--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,14 +1,12 @@
 ---
-name: John Simmons
+name: Perpetua Digital
 avatar: /static/images/johnandsammy.jpg
 occupation: Analytics Engineer
 company: perpetua.digital
 email: john@perpetua.digital
-linkedin: https://www.linkedin.com/in/johndavidsimmons/
-twitter: https://www.instagram.com/johndavidsimmons/
 ---
 
-My name is John Simmons and I am a web analytics engineer from Michigan, USA.
+My name is Perpetua Digital and I am a web analytics engineer from Michigan, USA.
 Although I dabble in other tools once in a while, my primary focus and experience is in the
 Adobe Experience Platform. I'm an Adobe Certified Developer in both Adobe Analytics and Adobe Target.
 I started out putting click tags on buttons and accidentally became a "real" engineer along the way.
