--- a/data/blog/readme-the-rejected-launch-extension.mdx
+++ b/data/blog/readme-the-rejected-launch-extension.mdx
@@ -96,7 +96,7 @@ in custom code comments, wiki pages, etc.
   height="315"
   src="https://www.youtube.com/embed/YR7uSiCUO8o?si=RIJNOQTQ-_su1yV9"
   title="YouTube video player"
-  frameborder="0"
+  frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerpolicy="strict-origin-when-cross-origin"
   allowfullscreen
